fixed gap between rows

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+.row {
+  height: 25px;
+  
+}
 .column {
   border: 2px solid rgb(0, 0, 0);
   display: inline-block;
